--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "webpack": "^4.28.2"
   }
 }
