--- a/package.json
+++ b/package.json
@@ -4,17 +4,29 @@
   "description": "this is a practise of WebGL",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/app.js"
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production"
   },
   "author": "Rui Nan",
   "license": "MIT",
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
+    "material-ui": "^0.20.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
-    "webpack": "^4.28.2"
+    "redux": "^4.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "connected-react-router": "^6.1.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "react-router": "^4.3.1",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.14"
   }
 }
